# logging-test

./: pyproject.toml
logging_test/: log.py  main.py  next_to_main.py
logging_test/subfolder/: below_main.py
