[tool.poetry]
name = "logging-test"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
readme = "README.md"
packages = [{include = "logging_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
ipywidgets = "^8.0.4"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
tools = {git = "https://github.com/datapointchris/tools.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
